--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>
+      Publishing and analysing time series on the Semantic Web with Matrix Profile techniques
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
